--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,11 +7,13 @@
 }
 
 html {
-  line-height: 1.5;
+  line-height: 2;
+  letter-spacing: 2.5px;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: large;
   color: $body-color;
   background-color: #fbfbfb;
   margin: 0;
